[package]
name = "leo-words-with-fam"
version.workspace = true
edition.workspace = true

# This crate is an in-process leo package. It is built as a member of the leo
# workspace via a symlink at ~/Leo/leo/packages/leo-words-with-fam, so the path
# dependencies below resolve relative to that location (like every leo package).

[dependencies]
leo-core = { path = "../../crates/leo-core" }
leo-package = { path = "../../crates/leo-package" }
leo-db = { path = "../../crates/leo-db" }
leo-apns = { path = "../leo-apns" }
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
rand = "0.8"

[dev-dependencies]
