[package]
name = "leo-words-with-fam"
version = "0.2.0"
edition = "2024"

# Standalone remote **app** package. Runs as its own binary (built from git on
# the host, NOT linked into Leo), serves its HTTP API on $LEO_APP_PORT, and keeps
# its own SQLite at $LEO_DATA_DIR/words.db. It reaches Leo only through the
# broker: identity via the X-Leo-User-Id header the proxy injects, and the family
# roster via GET $LEO_API_URL/api/users. No leo-* crate dependencies.

[[bin]]
name = "leo-words-with-fam"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
